# Ask-Ocr

./: .gitignore  .prettierignore  LICENSE  PRIVACY_POLICY.md  PROGRESS.md  Prompt.txt  README.md  lists.md  package-lock.json  package.json  structures.md  tobefix.md
Code/: .gitignore  BUG_FIXES_SUMMARY.md  IMPLEMENTATION_PLAN.md  PROGRESS.md  README.md  REGION_CAPTURE_AND_POPUP_FIX.md  TESTING_GUIDE.md  guide.md  lists.md  package-lock.json  package.json
Code/docs/: BUGFIXES_AND_COMPLETION.md  SESSION_10_SUMMARY.md  SESSION_11_SUMMARY.md  SESSION_12_SUMMARY.md  tesseract-bundling.md
Code/frontend/: package-lock.json  package.json  popup.html  vite.config.ts
Code/frontend/src/: App.css  App.tsx  index.css
Code/frontend/src/components/: MathFormulaPreview.css  MathFormulaPreview.tsx  OcrResultsModal.css  OcrResultsModal.tsx  ScreenshotOverlay.css  index.ts
Code/frontend/src/contexts/: ThemeContext.tsx
Code/frontend/src/services/: file-search.service.ts  screenshot-ocr-workflow.service.ts
Code/frontend/src/styles/: border-radius.css  color-palette.css  design-tokens.css  glass-effects.css  shadows.css
Code/python_backend/: audio_ai_helper.py  downloader.py  media_converter.py  media_helper.py  requirements.txt
Code/shared/types/: ai.types.ts
Code/src-tauri/: Cargo.toml  tauri.conf.json
Code/src-tauri/src/: main.rs  ocr.rs  player.rs
Code/src-tauri/src/audio_ai/: mod.rs
Code/testing/: INTEGRATION_CHECKLIST.md  TESTING_GUIDE.md  UNIVERSAL_AI_GUIDE.md
FFmpegFreeUI-main/FFmpegFreeUI/界面/: 界面_常规流程参数_V2.resx
cleancode/frontend/: popup.html  tailwind.config.js
cleancode/frontend/src/: App.tsx  index.css
cleancode/shared/types/: index.ts
cleancode/src-tauri/: Cargo.toml
cleancode/src-tauri/src/: main.rs
cleancode/src-tauri/src/context/: macos.rs
cleancode/src-tauri/src/database/: mod.rs
cleancode/src-tauri/src/ollama/: commands.rs  detector.rs  mod.rs
cleancode/src-tauri/src/screenshot/: mod.rs
cleancode/src-tauri/src/shortcuts/: mod.rs
cleancode/src-tauri/src/tray/: mod.rs
cleancode/src-tauri/src/window_manager/: mod.rs
docs/: ARCHITECTURE.md  COMPONENT_ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  SESSION_9_FINAL.md  SESSION_9_SUMMARY.md  code-signing-guide.md  ocr-decision.md
frontend/: package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: MathFormulaPreview.tsx  ModelInstallPathSelector.tsx  OcrResultsModal.css  OcrResultsModal.tsx  ScreenshotOverlay.tsx
frontend/src/services/: database.service.ts  screenshot-ocr-workflow.service.ts  task-queue.service.ts
frontend/src/styles/: index.css  transparent-backgrounds.css  typography.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  ollama.rs
src-tauri/src/context/: windows.rs
src-tauri/src/database/: mod.rs
src-tauri/src/screenshot/: mod.rs
src-tauri/src/tray/: mod.rs
(+208 files in other folders)
